# zen-trainer

./: .gitignore  LLM.md  README.md  pyproject.toml  train_4b.py  train_4b_simple.py
.github/workflows/: ci.yml
zen_trainer/: __init__.py  benchmark.py  models.py  trainer.py
