[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zen-trainer"
version = "0.1.0"
description = "Training framework for Zen Coder models - fine-tune 4B to 1T parameter models on agentic coding data"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Zach Kelling", email = "z@hanzo.ai" }
]
keywords = [
    "llm",
    "fine-tuning",
    "training",
    "qwen",
    "devstral",
    "glm",
    "kimi",
    "agentic",
    "coding",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "bitsandbytes>=0.43.0",
    "tiktoken>=0.6.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.10.0",
    "mlx-lm>=0.10.0",
]
unsloth = [
    "unsloth>=2024.4",
]
deepspeed = [
    "deepspeed>=0.14.0",
]
eval = [
    "lm-eval>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
]
all = [
    "zen-trainer[mlx,unsloth,deepspeed,eval]",
]

[project.urls]
Homepage = "https://github.com/zenlm/zen-trainer"
Documentation = "https://github.com/zenlm/zen-trainer#readme"
Repository = "https://github.com/zenlm/zen-trainer"
Issues = "https://github.com/zenlm/zen-trainer/issues"

[project.scripts]
zen-train = "zen_trainer:main"
zen-benchmark = "zen_trainer.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["zen_trainer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
